test pop up no pom change